fix gap

--- a/src/$core$/LongText.scss
+++ b/src/$core$/LongText.scss
@@ -586,16 +586,16 @@
             }
 
             //
-            & { inset-block-end: max(min(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px)), 0px) !important; }
+            & { inset-block-end: max(max(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px)), 0px) !important; }
 
             //
             @media (display-mode: fullscreen) {
-                & { inset-block-end: max(calc(0rem + env(safe-area-inset-bottom, 0px) + min(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px))), 0px) !important; }
+                & { inset-block-end: max(max(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px)), 0px) !important; }
             }
 
             //
             @at-root :fullscreen & {
-                & { inset-block-end: max(calc(0rem + env(safe-area-inset-bottom, 0px) + min(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px))), 0px) !important; }
+                & { inset-block-end: max(max(env(keyboard-inset-bottom, 0px), env(keyboard-inset-height, 0px)), 0px) !important; }
             }
 
             //
